<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeFragment"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#d2c2fd">

    <TextView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_margin="60dp"
        android:background="@color/cardview_light_background"
        android:textAlignment="center"
        android:padding="30dp"
        android:text="@string/welcome_to_superquiz"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        android:text="@string/what_s_your_name" />
    
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:hint="@string/entrez_votre_nom" />
    
    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:paddingHorizontal="24dp"
        android:textSize="14sp"
        android:text="@string/let_s_continue"/>

</LinearLayout>